deploy/k8s/local/trip/trip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-deployment
spec:
  selector:
      matchLabels:
        app: trip-api
  replicas: 1
  template:
      metadata:
        labels:
            app: trip-api
      spec:
        containers:
        - name: trip-api
          image: vany0114/duber.trip.api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "600m"
          ports:
          - containerPort: 32775
