deploy/k8s/local/trip/trip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  selector:
    app: trip-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 32775
