deploy/k8s/local/trip/trip-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trip-ingress
spec:
  rules:
  - host: trip.52.149.189.181.nip.io
    http:
      paths:
      - backend:
          serviceName: trip-service
          servicePort: 80
        path: /trip
